# cxroots

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  LICENSE  README.ipynb  README.md  README.rst  README_INPUT.ipynb  README_INPUT.md  README_pip.rst  changelog.md  coverage.lcov  create_readme  pyproject.toml  pytest.ini  readme_input.ipynb  readme_input.md  readme_input.pmd  renovate.json  requirements.txt  requirements_analysis.txt  requirements_doc.txt  requirements_static_analysis.txt  requirements_test.txt  setup.cfg  setup.py  temp_readme_input.ipynb
.circleci/: config.yml
.github/: CODEOWNERS  codeql-config.yml  dependabot.yml
.github/actions/build-docs/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: analysis.yml  codeql-analysis.yml  format.yml  publish.yml  pythonpackage.yml  test.yml  test_pip.yaml  tests.yml
.sonarlint/: connectedMode.json
README_resources/: create_resources  readmeEx.py  readmeExOut.txt  readme_example.py
cxroots/: ApproximateRoots.py  Contour.py  Contours.py  CountRoots.py  CxDerivative.py  DemoRootFinder.py  Deriv.py  Derivative.py  EnclosedRoots.py  IterativeMethods.py  Misc.py  Paths.py  RootFinder.py  RootResult.py  __init__.py  contour.py  contour_interface.py  derivative.py  iterative_methods.py  paths.py  root_approximation.py  root_counting.py  root_finding.py  root_finding_demo.py  root_result.py  types.py  util.py  version.py
cxroots/Contours/: AnnulusSector.py
cxroots/Legacy/: CountRootsArg.py  Multiplicity.py
cxroots/contours/: Annulus.py  AnnulusSector.py  Circle.py  Rectangle.py  annulus.py  annulus_sector.py  circle.py  rectangle.py
cxroots/contours copy/: Annulus.py  Rectangle.py
cxroots/tests/: ApproxEqual.py  SetsApproxEqual.py  test.py  test_cluster.py  test_contains.py  test_contours.py  test_countroots.py  test_deriv.py  test_guess.py  test_guessRootSymmetry.py  test_guessRoots.py  test_muller.py  test_multiplicity.py  test_newton.py  test_paths.py  test_plotting.py  test_progress.py  test_rootfinding.py  test_rootfinding_contours.py  test_rootfinding_polynomial.py  test_secant  test_secant.py  test_simplerootfinding.py
docs/: .buildinfo  Generating README.txt  Makefile  README.ipynb  changelog.html  conf.py  contour.html  contour.ipynb  contours-1.py  contours-2.py  contours-3.py  contours-4.py  contours-5.py  contours.html  countroots.html  countroots.ipynb  create_docs  demo-1.py  demo.html  docex_contour_annulussector_b.py  ex_annular_combustion-1.py  ex_annular_combustion.html  genindex.html  getting_started.html  guesses-1.py  guesses-2.py  guesses.html  index.html  installation.html  iteration.html  logging.html  main.html  main.ipynb  objects.inv  paths.html  prod.html  result-1.py  result.html  rootresult-1.py  rootresult.html  (+6 more)
docs/.doctrees/: changelog.doctree  contour.doctree  contours.doctree  countroots.doctree  demo.doctree  environment.pickle  ex_annular_combustion.doctree  getting_started.doctree  guesses.doctree  index.doctree  installation.doctree  iteration.doctree  logging.doctree  main.doctree  paths.doctree  prod.doctree  result.doctree  rootresult.doctree  roots.doctree  theory.doctree  tutorial.doctree
docs/_downloads/b5b42cb3c7b31472c997468aff73b06b/: contours-5.py
docs/_downloads/e33a0e1cb6f9b692309558da944004e8/: contours-2.py
docs/_modules/: index.html
docs/_modules/cxroots/: ApproximateRoots.html  Contour.html  Contours.html  CountRoots.html  DemoRootFinder.html  IterativeMethods.html  Paths.html  RootFinder.html  RootResult.html  contour.html  iterative_methods.html  paths.html  root_counting.html  root_result.html
docs/_sources/: changelog.rst.txt  contours.rst.txt  countroots.rst.txt  demo.rst.txt  ex_annular_combustion.rst.txt  getting_started.rst.txt  index.rst.txt  installation.rst.txt  iteration.rst.txt  logging.rst.txt  main.ipynb.txt  paths.rst.txt  prod.rst.txt  result.rst.txt  theory.rst.txt  tutorial.rst.txt
docs/_static/: bizstyle.js  documentation_options.js
docs/html/: contour.html  countroots.html  genindex.html  index.html  main.html  objects.inv  search.html  searchindex.js
docs/html/.doctrees/: contour.doctree  countroots.doctree  environment.pickle  index.doctree  main.doctree
docs/html/_modules/: index.html
docs/plot_directive/: contours-3.py  ex_annular_combustion-1.py  guesses-1.py  result-1.py  tutorial-1.py
docs_src/: Makefile  conf.py  contours.rst  countroots.py  countroots.rst  create_docs  cxroots_logging_progress.yml  cxroots_progress.yml  demo.rst  docex_contour.py  docex_contour_annulus.py  docex_contour_annulussector_a.py  docex_contour_circle.py  docex_contour_rectangle.py  docex_gettingstarted.py  docex_gettingstarted_a.py  docex_gettingstarted_b.py  docex_gettingstarted_c.py  docex_guessRootSymmetry.py  docex_guessRoots.py  docex_logging.py  docex_logging_progress.py  docex_progress.py  docex_rootresult.py  docex_tutorial.py  ex_annular_combustion.rst  getting_started.rst  guesses.rst  index.rst  installation.rst  iteration.rst  logging.rst  package-lock.json  package.json  paths.rst  prod.rst  refs.bib  result.rst  rootresult.rst  roots.rst  (+2 more)
docs_src/.doctrees/: environment.pickle  index.doctree
docs_src/.ipynb_checkpoints/: main-checkpoint.ipynb
examples/: AnnularCombustionChamber.ipynb  ex_conjugateSymmetry.ipynb  ex_conjugateSymmetry.py  ex_introduction.py
notebook_examples/: known_root_info.ipynb
test/: test.py
(+15 files in other folders)
